# Telegram-Detox-bot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
src/tg_detox_locker/: access.py  bot.py  cli.py  config.py  crypto.py  db.py  duration.py  enums.py  errors.py  logging_utils.py  models.py  notifications.py  presenters.py  repositories.py  services.py  states.py  telethon_gateway.py  time_utils.py  worker.py
systemd/: detox-bot.service  detox-worker.service
tests/: test_access.py  test_cli.py  test_config.py  test_control_service.py  test_crypto.py  test_duration.py  test_runtime.py  test_states.py
