[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-detox-locker"
version = "0.1.0"
description = "Single-user Telegram detox locker with MTProto watchdog and companion bot."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Codex" },
]
keywords = ["telegram", "detox", "telethon", "self-lock", "bot"]
dependencies = [
  "aiogram>=3.22,<4",
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "cryptography>=44,<46",
  "SQLAlchemy>=2.0.39,<3",
  "Telethon>=1.42,<2",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
]

[project.scripts]
detox-bot = "tg_detox_locker.bot:main"
detox-cli = "tg_detox_locker.cli:main"
detox-worker = "tg_detox_locker.worker:main"

[project.urls]
Homepage = "https://github.com/r3srs/Telegram-Detox-bot"
Repository = "https://github.com/r3srs/Telegram-Detox-bot"
Issues = "https://github.com/r3srs/Telegram-Detox-bot/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
